--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -22,7 +22,7 @@ summary: "I am a passionate computer scientist with 3 years of working experienc
 I'm interested in software applications in solar physics, including machine learning.
 Currently, I'm working on building the data reduction pipeline for
 [PUNCH](https://punch.space.swri.edu/). This will help scientists decode
-mysteries about the solar corona and wind. In my spare time, I like photography,
+mysteries about the solar corona and solar wind. In my spare time, I like photography,
 reading, volunteering to teach programming, baking, and many more things."
 
 # your social links
