--- a/config.yaml
+++ b/config.yaml
@@ -34,7 +34,7 @@ params:
   # GitHub repo URL and branch of your site
   gitRepo: https://github.com/jmbhughes/jmbhughes.github.io
   gitBranch: source
-  background: "images/eclipse2.jpg"
+  background: "images/eclipse2_compressed.jpeg"
 
 
   # specify whether you want to write some blog posts or not
