--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -21,9 +21,9 @@ resume: "files/resume.pdf"
 summary: "I am a computer scientist with 3 years of working experience.
 I'm interested in software applications in solar physics, including machine learning.
 Currently, I'm working on building the data reduction pipeline for
-[PUNCH](https://punch.space.swri.edu/). This will help scientists decode
+[PUNCH](https://punch.space.swri.edu/). This will help scientists resolve
 mysteries about the solar corona and solar wind. In my spare time, I like photography,
-reading, volunteering to teach programming, baking, and many more things."
+reading, baking, and many more things."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
