--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -58,7 +58,7 @@ socialLinks:
 softSkills:
 - name: Leadership
   percentage: 95
-  color: reen
+  color: green
 - name: Python Development
   percentage: 95
   color: green
