--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -23,7 +23,7 @@ I'm interested in software applications in solar physics, including machine lear
 Currently, I'm working on building the data reduction pipeline for
 [PUNCH](https://punch.space.swri.edu/). This will help scientists resolve
 mysteries about the solar corona and solar wind. In my spare time, I like photography,
-reading, baking, and many more things."
+reading, sculpting with polymer clay, and many more things."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
