adds digital garden

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,7 +13,10 @@ contactInfo:
 # a summary of what you do
 summary:
 - I am a research computer scientist
-- I work with Python
-- I work on understanding the Sun
+- I write Python
+- I am learning Rust
+- I enjoy reading
+- I study the Sun
 - I develop data reduction pipelines
 - I work at SwRI Boulder
+- I am a digital gardener
