update job title

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,7 +12,7 @@ contactInfo:
 
 # a summary of what you do
 summary:
-- I am a research computer scientist
+- I am a senior computer scientist
 - I write Python
 - I am learning Rust
 - I enjoy reading
