--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Install node modules
       run: |
+        hugo mod get -u github.com/jmbhughes/jmbhughes.github.io
         hugo mod npm pack
         npm install        
 
