expand about page

--- a/hugo.toml
+++ b/hugo.toml
@@ -87,7 +87,7 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
   # By default (or if nothing is specified), summary is used.
 
 [Languages.en-us.params.author]
-  avatar = "me.jpeg" # put the file in assets folder; also ensure that image has same height and width
+  avatar = "head.jpeg" # put the file in assets folder; also ensure that image has same height and width
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
   intro = "J. Marcus Hughes"
   name = "J. Marcus Hughes"
