update about me

--- a/hugo.toml
+++ b/hugo.toml
@@ -69,7 +69,7 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
-  description = "Computer scientist studying the Sun at the Southwest Research Institute."
+  description = "Computer scientist studying the Sun at the Southwest Research Institute"
   mainSections = ['posts']
   toc = true # set to false to disable table of contents 'globally'
   tocOpen = false # set to true to open table of contents by default
@@ -91,7 +91,7 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
   intro = "J. Marcus Hughes"
   name = "J. Marcus Hughes"
-  description = "Computer scientist studying the Sun and ML at the Southwest Research Institute."
+  description = "Computer scientist studying the Sun and ML at the Southwest Research Institute"
 
 # Allow to override webmanifest options
 [Languages.en-us.params.webmanifest]
