--- a/config.toml
+++ b/config.toml
@@ -49,3 +49,16 @@ copyright = "© $CURRENT_YEAR J. Marcus Hughes $SEPARATOR Unless otherwise noted
 
 favicon = "icons/favicon.ico"
 
+automatic_loading = true  # If set to false, a "Load comments" button will be shown.
+repo = "welpo/tabi-comments"
+repo_id = "R_kgDOG3bviQ"  # Find this value in https://giscus.app/
+category = "Announcements"
+category_id = "DIC_kwDOG3bvic4CjCSq"  # Find this value in https://giscus.app/
+mapping = "slug"  # Available: pathname; url; title; slug. "slug" will use the post's filename (slug); this is the only way to share comments between languages.
+strict_title_matching = 1  # 1 to enable, 0 to disable. https://github.com/giscus/giscus/blob/main/ADVANCED-USAGE.md#data-strict
+enable_reactions = 1  # 1 to enable, 0 to disable.
+comment_box_above_comments = false
+light_theme = "noborder_light"
+dark_theme = "noborder_dark"
+lang = ""  # Leave blank to match the page's language.
+lazy_loading = true
