--- a/config.toml
+++ b/config.toml
@@ -74,3 +74,7 @@ light_theme = "noborder_light"
 dark_theme = "noborder_dark"
 lang = ""  # Leave blank to match the page's language.
 lazy_loading = true
+
+[extra.analytics]
+service = "goatcounter"
+id = "jmbhughes-stats"
